--- a/templates/Index.html
+++ b/templates/Index.html
@@ -24,14 +24,19 @@
                 <div class="col-sm-10">
                 <input type="text" class="form-control-plaintext" id="staticEmail" placeholder = "Username" name="username">
                 </div>
-            </div>                  
+            </div>
             <div class="mb-3 row2">
                 <div class="col-sm-10">
                 <input type="password" class="form-control" id="inputPassword" placeholder = "Password" name="password">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Log in</button>
+            <div class="Invalid">
+                Invalid username or password
             </div>
+            </div>
+
+
             </form>
         </main>
         </div>
