--- a/templates/Index.html
+++ b/templates/Index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-        <link rel="stylesheet "href={{ url_for('static', filename='css/Index.css') }}>
+        <link rel="stylesheet "href={{ url_for('static', filename='css/IndexStyle.css') }}>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
     </head>
@@ -35,8 +35,6 @@
                 Invalid username or password
             </div>
             </div>
-
-
             </form>
         </main>
         </div>
