--- a/templates/Index.html
+++ b/templates/Index.html
@@ -32,7 +32,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Log in</button>
             <div class="Invalid">
-                Invalid username or password
+                {{InvalidPassword}}
             </div>
             </div>
             </form>
