--- a/static/css/SDashboardStyle.css
+++ b/static/css/SDashboardStyle.css
@@ -48,8 +48,8 @@ color:#444343;
 * ======================================================================== */
 .settingmodel-mysettings {
   background-color: #f2f2f2;
-  width: 40vw;
-  height: 50vh;
+  width: 550px;
+  height: 350px;
   padding: 10px;
   padding-left:30px;
   padding-bottom:50px;
@@ -82,15 +82,14 @@ color:#444343;
   z-index: 1;
 }
 .box1{
-  width: 20vw;
+  width: 340px;
   border-radius: 0.15cm;
-  height:5vh;
+  height:35px;
   font-size: 15px;
   position:absolute;
   left:30%;
   outline:none;
   border: 1px solid #515152a9;
-  shadow:none;
 }
 .setrow{
   height:17%;
@@ -100,7 +99,6 @@ color:#444343;
   display:inline-block;
   float:left;
   text-align:left;
-  width:10vw;
   padding-top:12px;
 }
 #settingTit{
@@ -127,11 +125,11 @@ color:#444343;
 
 .btnChange {
   position: absolute;
-  right: 20%;
-  bottom: 10%;
+  right: 45px;
+  bottom: 30px;
   border-radius: 0.2cm;
-  width: 6vw;
-  height: 5vh;
+  width: 90px;
+  height: 37px;
   font-size: 16px;
   color: #eee;
   background-color: #37BC9B;
@@ -144,6 +142,14 @@ color:#444343;
 .btnChange:active{
   transform: translateY(2px);
 }
+
+.warnning{
+  color: rgb(146, 0, 0);
+  font-size: 16px;
+  margin-top:0.1cm;
+  margin-left: 3.7cm;
+}
+
 .Settinghidden{
   display:none;
 }
