--- a/templates/LDashboard.html
+++ b/templates/LDashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href={{ url_for('static', filename='css/kebabStyle.css') }} rel="stylesheet">
-    <link href={{ url_for('static', filename='css/LDashboardStyle.css') }} rel="stylesheet">
+    <link href={{ url_for('static', filename='css/LdashboardStyle.css') }} rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -102,6 +102,9 @@
                         <div>
                             <input type="password" class="box1" id="ConfirmPassword">
                         </div>
+                    </div>
+                    <div class="warnning">
+                        Invalid password
                     </div>
                     <button type="submit" class="btnChange"><strong>Change</strong></button>
                 </div>
