--- a/templates/SDashboard.html
+++ b/templates/SDashboard.html
@@ -13,7 +13,7 @@
     <form method="POST">
         <header class = "Header1">
             <h1 class="h1"><strong>Student Request Management System</strong></h1>
-            <div class="pull-right username" id = "username"></div>
+            <div class="pull-right username" id = "username">{{username}}</div>
         </header>
         <ul class="navSettings">
             <div class="kebabSettings">
