--- a/templates/LDashboard.html
+++ b/templates/LDashboard.html
@@ -22,7 +22,7 @@
                 <figure></figure>
                 <ul class="dropdownSettings">
                     <li class="SettingsListItem"><a class="SettingsListItem">Change Password</a></li>
-                    <li class="SettingsListItem"><a href="" class="SettingsListItem">Log Out</a></li>
+                    <li class="SettingsListItem"><a href="/logout" class="SettingsListItem">Log Out</a></li>
                 </ul>
             </div>
         </ul>
@@ -82,31 +82,31 @@
                     <div class="setrow">
                         <label class="lab"><strong>Username</strong></label>
                         <div>
-                            <input type="text" readonly class="box1 fixed1" id="username2" value="username.123">
+                            <input type="text" readonly class="box1 fixed1" id="username2" value={{username}}>
                         </div>
                     </div>
                     <div class="setrow">
                         <label class="lab"><strong>Old Password</strong></label>
                         <div>
-                            <input type="password" class="box1" id="OldPassword">
+                            <input type="password" class="box1" id="OldPassword" name="OldPassword">
                         </div>
                     </div>
                     <div class="setrow">
                         <label class="lab"><strong>New Password</strong></label>
                         <div>
-                            <input type="password" class="box1" id="NewPassword">
+                            <input type="password" class="box1" id="NewPassword" name="NewPassword">
                         </div>
                     </div>
                     <div class="setrow">
                         <label class="lab"><strong>Confirm Password</strong></label>
                         <div>
-                            <input type="password" class="box1" id="ConfirmPassword">
+                            <input type="password" class="box1" id="ConfirmPassword" name="ConfirmPassword">
                         </div>
                     </div>
                     <div class="warnning">
-                        Invalid password
+                        {{errorMessage}}
                     </div>
-                    <button type="submit" class="btnChange"><strong>Change</strong></button>
+                    <button type="submit" class="btnChange" name="changePassword" value="changePassword"><strong>Change</strong></button>
                 </div>
                 <div class="settingmodel-background Settinghidden"></div>
             </div>
